# midi_web_app

./: README.md  pyproject.toml
src/midi_web_app/application/: application.py  settings.py
src/midi_web_app/application/entities/: base_entity.py  piano_entity.py
src/midi_web_app/application/scenes/: game_scene.py
src/midi_web_app/application/utils/: image.py
src/midi_web_app/client/: echo-client.py  midi_client.py
src/midi_web_app/server/: echo-server.py  midi_server.py
src/utils/: message.py
