[tool.poetry]
name = "midi-web-app"
version = "0.1.0"
description = ""
authors = ["AydenClay96 <AydenClay1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mido = "^1.3.2"
rtmidi = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
