[tool.poetry]
name = "midi-web-app"
version = "0.1.0"
description = ""
authors = ["AydenClay96 <AydenClay1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
py-midi = "^2.0.1"
pywin32 = "^306"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
